--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,17 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link as="font" crossorigin="anonymous" href="%PUBLIC_URL%/fonts/hurmegeosans-no2-400.woff2" type="font/woff2">
+    <link as="font" crossorigin="anonymous" href="%PUBLIC_URL%/fonts/hurmegeosans-no2-600.woff2" type="font/woff2">
+    <link as="font" crossorigin="anonymous" href="%PUBLIC_URL%/fonts/hurmegeosans-no2-700.woff2" type="font/woff2">
+    <style>
+      @font-face {
+        font-family: "hurme_no2-webfont";
+        src: url('%PUBLIC_URL%/fonts/hurmegeosans-no2-400.woff2') format("woff2");
+        src: url('%PUBLIC_URL%/fonts/hurmegeosans-no2-600.woff2') format("woff2");
+        src: url('%PUBLIC_URL%/fonts/hurmegeosans-no2-700.woff2') format("woff2");
+      }
+    </style>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
