--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link as="font" crossorigin="anonymous" href="%PUBLIC_URL%/fonts/hurmegeosans-no2-400.woff2" type="font/woff2">
     <link as="font" crossorigin="anonymous" href="%PUBLIC_URL%/fonts/hurmegeosans-no2-600.woff2" type="font/woff2">
     <link as="font" crossorigin="anonymous" href="%PUBLIC_URL%/fonts/hurmegeosans-no2-700.woff2" type="font/woff2">
